added header left header and part of right header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+	<!-- overall page wrapper  -->
+	<div id="facebook-wrapper">
+		<!-- Header Div to contain all headet elements -->
+		<div id="header">
+			<div id="header-inner">
+				<div id="left-header">
+					<!-- Logo, search bar 	 -->
+					<div id="fb-logo"></div >
+					<div id="fb-search">
+						<input type="" placeholder="Your Name">
+					</div>
 
+				</div>	
+				<div id="right-header">
+					<!-- avatar, name, social, icons, lock, down arrow -->
+					<div id="avatar-name">
+						Ryan 
+					</div>
+					<div id="small-avatar">
+						<img src="avatar.jpg" alt="">
+					</div>
+					<div id="home-link">
+						<a href="#" title="">HOME</a>
+					</div>
+					<div class="social-icon friends">	
+					</div>
+					<div class="social-icon messages">	
+					</div>
+					<div class="social-icon notifications">	
+					</div>
+				</div>
+			</div>
+		<div id="cover-photo-wrapper">
+			<!-- big photoß
+			small avatar, name, 2 buttons 
+			nav menu 
+			camera p in the top corner -->
+		</div>
+	</div>
 </body>
 </html>
