--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 					</div>
 					<div class="social-icon notifications">	
 					</div>
+					<div class="spacer">|	
+					</div>
+					<div class="social-icon lock">	
+					</div>
+					<div class="social-icon down-arrow">	
+					</div>
 				</div>
 			</div>
 		<div id="cover-photo-wrapper">
