--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 							<li class="cover-menu-item">Friends</li>
 							<li class="cover-menu-item">Photos</li>
 							<li class="cover-menu-item">More</li>
+							<li class="cover-menu-item">More</li>
 						</div>
 					</div>
 				</div>
