removed bad jpegs

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			 	<li><img src="grace_hopper.jpg" alt=""></li>
 			 	<li><img src="bill_gates.jpg" alt=""></li>
 			 	<li><img src="elon_musk.jpg" alt=""></li>
-			 	<li><img src="tom_myspace.jpg" alt=""></li>
+			 	<li><img src="ada_lovelace.jpg" alt=""></li>
 			 	<li><img src="steve_jobs.jpg" alt=""></li>
 			 </div>
 		</div>
