changed photos moved cover menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div id="right-header">
 					<!-- avatar, name, social, icons, lock, down arrow -->
 					<div id="small-avatar">
-						<img src="avatar.jpg" alt="">
+						<img src="ryan.jpg" alt="">
 					</div>
 					<div id="small-avatar-name">
 						Ryan
@@ -48,11 +48,11 @@
 		<div id="cover-photo-wrapper">
 				<!-- div big photo -->
 				<div id="big-photo">
-					<img src="big_background.jpg" alt="">	
+					<!-- <img src="Louvre.jpg" alt="">	 -->
 				</div>
 				<div id="cover-photo-lower">
 					<div id="big-avatar">
-						<img src="avatar.jpg" alt="">
+						<img src="ryan.jpg" alt="">
 					</div>
 					<div id="cover-photo-right">
 						<div id="avatar-name">
