added friends box to FB

--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
 							<button type=""> Activity Log</button>
 						</div>
 						<div id="cover-menu">
+							<li class="cover-menu-item"></li>
 							<li class="cover-menu-item">Timeline</li>
 							<li class="cover-menu-item">About</li>
 							<li class="cover-menu-item">Friends</li>
 							<li class="cover-menu-item">Photos</li>
 							<li class="cover-menu-item">More</li>
-							<li class="cover-menu-item">More</li>
+							<li class="cover-menu-item"></li>
 						</div>
 					</div>
 				</div>
@@ -82,10 +83,11 @@
 			 	<li class="info-box-item"><input placeholder="Info"></li>
 			 </div>
 			 <div id="friends-box">
+			 	<h1 id="friends-heading">Friends</h1>
 			 	<li><img src="tom_myspace.jpg" alt=""></li>
 			 	<li><img src="grace_hopper.jpg" alt=""></li>
 			 	<li><img src="bill_gates.jpg" alt=""></li>
-			 	<li><img src="elon_musk.jpg" alt=""></li>
+			 	<li class="drop"><img src="elon_musk.jpg" alt=""></li>
 			 	<li><img src="ada_lovelace.jpg" alt=""></li>
 			 	<li><img src="steve_jobs.jpg" alt=""></li>
 			 </div>
